# tcm-cli

./: CHANGELOG.md  LICENSE  README.md  install.sh  pyproject.toml
docs/: LANGUAGE.md  PROVIDERS.md  README.md  index.html  script.js  styles.css
src/tcm/: __init__.py  cli.py
src/tcm/agent/: __init__.py  config.py  doctor.py  executor.py  planner.py  session.py  synthesizer.py
src/tcm/data/: __init__.py  downloader.py
src/tcm/models/: __init__.py  llm.py
src/tcm/tools/: __init__.py  code.py  compounds.py  data_api.py  formulas.py  herbs.py  interactions.py  literature.py  meridians.py  modern.py  pharmacology.py  safety.py  syndromes.py
src/tcm/ui/: suggestions.py  terminal.py
tests/: test_config.py  test_models.py  test_tools.py
